--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(39, 38, 38) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -29,6 +29,11 @@
     align-items: center;
   }
   
+  .navbar-container img {
+    padding: 1rem;
+    margin-top: 0.5rem;
+  }
+
   .fa-apple {
     margin-left: 0.5rem;
     font-size: 1.8rem;
