--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     height: 80px;
-    max-width: 1500px;
+    max-width: 1600px;
   }
   
   .navbar-logo {
@@ -34,10 +34,6 @@
     margin-top: 0.5rem;
   }
 
-  .fa-apple {
-    margin-left: 0.5rem;
-    font-size: 1.8rem;
-  }
   
   .nav-menu {
     display: grid;
@@ -52,6 +48,7 @@
   
   .nav-item {
     height: 80px;
+    cursor: pointer;
   }
   
   .nav-links {
