--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -96,7 +96,7 @@ h1 {
 
 .cards__day__calendar{
  
-  color: rgb(143, 134, 6);
+  color: #1f98f4;
   font-size: 18px;
   line-height: 24px;
 }
@@ -106,6 +106,10 @@ h1 {
   color: #252e48;
   font-size: 18px;
   line-height: 24px;
+}
+
+.mes{
+  background-color: royalblue;
 }
 
 @media only screen and (min-width: 1200px) {
