--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -43,8 +43,9 @@
     font-size: 18px;
     margin-bottom: 16px;
     border: 1px solid #fff;
+    background-color: white;
   }
-  
+
   .footer-links {
     width: 100%;
     max-width: 1000px;
@@ -105,11 +106,15 @@
     border: 1px solid #fff;
     display: flex;
     resize: none;
+    background-color: white;
   }
 
   .textarea-footer::placeholder{
     color: #b1b1b1;
   }
+
+
+
 
   /* Social Icons */
   .social-icon-link {
