--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -105,20 +105,7 @@
     color: #fff;
   }
   
-  .footer-link-avatar a {
-    color: #fff;
-    text-decoration: none;
-    margin-bottom: 0.5rem;
-  }
-  
-  .footer-link-avatar a:hover {
-    color: #e9e9e9;
-    transition: 0.3s ease-out;
-  }
 
-  .avatar-icon{
-    margin: auto,55px;
-  }
 
 
   .footer-email-form h2 {
@@ -149,9 +136,44 @@
   }
 
 
-  Avatar{
-    width: 200px;
-  } 
+
+  .footer-link-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 240px;
+    box-sizing: border-box;
+  }
+
+  
+  .footer-link-info h2 {
+    margin-bottom: 13px;
+  }
+  
+  .footer-link-info > h2 {
+    color: #fff;
+  }
+
+  .footer-link-info p {
+    margin-bottom: 5px;
+    font-size: 17px;
+    color: #fff;
+  }
+
+  .footer-link-info a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 17px;
+    margin-bottom: 0.5rem;
+  }
+  
+  .footer-link-info a:hover {
+    color: #e9e9e9;
+    transition: 0.3s ease-out;
+  }
+
 
 
   /* Social Icons */
