--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -50,14 +50,19 @@ video {
     }
   }
   
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 375px) {
     .banner-container > h1 {
       font-size: 50px;
       margin-top: -100px;
     }
   
+    .video-fundo{
+      width: 100%;
+    }
+
     .banner-container > p {
-      font-size: 30px;
+      font-size: 20px;
+      
     }
   
     .button-mobile {
