--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -135,7 +135,13 @@ h1 {
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1024px) {
+  .video{
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
   .video{
     width: 100%;
   }
